Preparacion para entities

--- a/poli-collaboration-api/ormconfig.json
+++ b/poli-collaboration-api/ormconfig.json
@@ -1,10 +1,10 @@
 {
     "type": "postgres",
-    "host": "poli.coi1ljpzniw0.us-west-1.rds.amazonaws.com",
+    "host": "#",
     "port": 5432,
-    "username": "postgres",
-    "password": "admin123",
-    "database": "poli",
+    "username": "#",
+    "password": "#",
+    "database": "#",
     "entities": ["src/**/*.entity.ts"],
     "synchronize": false,
     "migrationsTableName": "migrations",
