--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.8",
     "@nestjs/typeorm": "^8.0.1",
+    "@types/passport": "^1.0.7",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "express": "^4.17.1",
     "joi": "^17.4.1",
+    "passport": "^0.4.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
