--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mapped-types": "^1.0.0",
+    "@nestjs/passport": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.8",
     "@nestjs/typeorm": "^8.0.1",
