--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "migrations:drop": "npm run typeorm -- migration:drop"
   },
   "dependencies": {
+    "@nestjs/cli": "^8.0.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
