--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "^4.17.1",
     "joi": "^17.4.1",
     "passport": "^0.4.1",
+    "passport-heroku": "^1.0.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
