--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-validator": "^0.13.1",
     "express": "^4.17.1",
     "joi": "^17.4.1",
+    "js-cookie": "^3.0.0",
     "passport": "^0.4.1",
     "passport-heroku": "^1.0.0",
     "passport-jwt": "^4.0.0",
